--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/*/node_modules
 /node_modules
 /.pnp
 .pnp.js
@@ -9,7 +10,10 @@
 /coverage
 
 # production
-/build
+/client/build
+
+# firebase cache
+/.firebase
 
 # misc
 .DS_Store
