--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "/functions/build",
+    "public": "./functions/build",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -13,7 +13,7 @@
   },
   "functions": {
     "predeploy": [
-      "npm --prefix $Env:RESOURCE_DIR run lint"
+      
     ]
   }
 }
