--- a/firebase.json
+++ b/firebase.json
@@ -6,14 +6,23 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [ {
-      "source": "**",
-      "function": "app"
-    } ]
+    "rewrites": [
+      {
+        "source": "/bigben",
+        "function": "bigben"
+      },
+      {
+        "source": "/api/**",
+        "function": "app"
+      },
+      {
+        "source": "**",
+        "destination": "/index.html",
+        "function": "app"
+      }
+    ]
   },
   "functions": {
-    "predeploy": [
-      
-    ]
+    "predeploy": []
   }
 }
